--- a/app/build.gradle
+++ b/app/build.gradle
@@ -22,6 +22,8 @@ dependencies {
     testImplementation 'org.mockito:mockito-inline:4.6.1'
     // This dependency is used by the application.
     implementation 'com.google.guava:guava:30.1.1-jre'
+
+    implementation "mysql:mysql-connector-java:8.0.29"
 }
 
 application {
