Methodes liées au compte joueur (à tester) dans PersonnageService + Template de connexion

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 spring.jpa.hibernate.ddl-auto=update
-spring.datasource.url=jdbc:mysql://mysql.snx.ovh:3306/demidieux_filrouge
+spring.datasource.url=jdbc:mysql://mysql.snx.ovh:3306/demidieux_test
 spring.datasource.username=demidieux
 spring.datasource.password=m#5Da$52gn
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
