--- a/build.gradle
+++ b/build.gradle
@@ -21,7 +21,8 @@ dependencies {
 	runtimeOnly 'com.h2database:h2'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 	implementation "mysql:mysql-connector-java:8.0.30"
-    
+	implementation 'org.springframework.boot:spring-boot-starter-security'
+    implementation 'org.springframework.boot:spring-boot-starter-validation:'
 }
 
 tasks.named('test') {
