--- a/build.gradle
+++ b/build.gradle
@@ -2,11 +2,12 @@ plugins {
 	id 'org.springframework.boot' version '2.7.3'
 	id 'io.spring.dependency-management' version '1.0.13.RELEASE'
 	id 'java'
+	id 'war'
 }
 
 group = 'projet.fil'
 version = '0.0.1-SNAPSHOT'
-sourceCompatibility = '18'
+sourceCompatibility = '17'
 
 repositories {
 	mavenCentral()
